css/style.css
@font-face {
	font-family: 'mindset-font';
	src: url('fonts/bankgothiclightbt.ttf') format('truetype');
}

@-webkit-keyframes mindset {
    0%{background-position:2% 0%}
    50%{background-position:99% 100%}
    100%{background-position:2% 0%}
}

@-moz-keyframes mindset {
    0%{background-position:2% 0%}
    50%{background-position:99% 100%}
    100%{background-position:2% 0%}
}

@-o-keyframes mindset {
    0%{background-position:2% 0%}
    50%{background-position:99% 100%}
    100%{background-position:2% 0%}
}

@keyframes mindset {
    0%{background-position:2% 0%}
    50%{background-position:99% 100%}
    100%{background-position:2% 0%}
}

.countdown-font {
	font-family: mindset-font;
	font-size: 650%;
	background: -webkit-linear-gradient(133deg, rgba(255,220,170,1) 0%, rgba(201,170,255,1) 100%);
	-webkit-background-clip: text;
  	-webkit-text-fill-color: transparent;
}

.blurred-logo-text {
	position: relative;
	left: -50%;
}

.blurred-container {
	position: absolute;
	left: 50%;
	opacity: 1;
    transition: opacity 0.5s;
}

.hide {
    opacity: 0 !important;
}

.black-background {
	background-color: #141414;
}

.main-logo {
	max-width: 100%;
	max-height: 100%;
	transition: transform .2s;
}

.main-logo:hover {
	transform: scale(1.05);
}

.social-logo {
	max-width: 4%;
	transition: transform .2s;
	margin-left: 1%;
	margin-right: 1%;
}

.social-logo:hover {
	transform: scale(1.25);
}

/*
.video-background {
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
}
*/

.center {
	width: 50%;
	margin: auto;
}

/*
.content {
	position: fixed;
	top: 0;
	height: 100%;
	background: rgba(0, 0, 0, 0.65);
	color: #f1f1f1;
}
*/

.content {
	margin: auto;
	height: 100%;
}

.construction {
	left: 32%;
	top: 28%;
	position: absolute;
}

.countdown-panel {
	margin-top: 4%;
	margin-bottom: 4%;
	opacity: 1;
    transition: opacity 0.5s;
}

.center-panel {
	margin-top: 6%;
	margin-bottom: 4%;
	opacity: 1;
    transition: opacity 0.5s;
}

.bottom-panel {
	margin-bottom: 100px;
	opacity: 1;
    transition: opacity 0.5s;
}

.align-center {
	text-align: center;
}

.row {
	display: inline;
}

body {
	margin-left: 0px;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	background: linear-gradient(270deg, #121212, #1f103c);
     background-size: 400% 400%;
     -webkit-animation: mindset 8s ease infinite;
     -moz-animation: mindset 8s ease infinite;
     -o-animation: mindset 8s ease infinite;
     animation: mindset 8s ease infinite;
 }

a:link {
	font-family: mindset-font;
	text-decoration: none;
}

a:visited {
	text-decoration: none;
}

a:hover {
	text-decoration: none;
}

